--- a/exercicios/ex024/paginas/pag01.html
+++ b/exercicios/ex024/paginas/pag01.html
@@ -13,6 +13,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            margin: auto;
         }
         caption{
             font-size: 1.3em;
@@ -37,7 +38,7 @@
 </head>
 <body>
     <table>
-        <caption>Tabelas responsivas</caption>
+        <caption>Vendas de produtos por Mês</caption>
         <thead>
             <tr>
                 <th>Produto</th>
