--- a/exercicios/ex024/iframe02.html
+++ b/exercicios/ex024/iframe02.html
@@ -9,7 +9,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }   
         iframe{
-            width: 600px;
+            width: 400px;
             height: 400px;
             display: block;
             margin: auto;
@@ -28,7 +28,7 @@
        voluptates officiis odit. Cumque eius reprehenderit ex eaque ipsum in rerum, officia,
        laborum dolorem ea commodi facilis omnis.
     </p>
-    <iframe src="pag01.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas/pag01.html" frameborder="0" height="500" width="500"></iframe>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et facere a necessitatibus,
         voluptates officiis odit. Cumque eius reprehenderit ex eaque ipsum in rerum, officia,
         laborum dolorem ea commodi facilis omnis.
