--- a/exercicios/ex024/iframe03.html
+++ b/exercicios/ex024/iframe03.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de iframes</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        iframe#tela{
+            width: 95vw;
+            height: 400px;
+            border: 2px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Faça um escolha</h1>
@@ -12,14 +22,21 @@
        Iure ipsam quidem, deleniti sed dolore esse.</p>
 
     <ul>
-        <li><a href=""></a>Primeira página</li>
-        <li><a href=""></a>Segunda página</li>
-        <li><a href=""></a>Terceira página</li>
+        <li><a href="paginas/pag01.html" target="frame">Primeira página</a></li>
+        <li><a href="paginas/pag02.html" target="frame">Segunda página</a></li>
+        <li><a href="paginas/pag03.html" target="frame">Terceira página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium consectetur
     distinctio rerum, veniam cupiditate accusamus veritatis ratione ad, nemo officia, ipsam alias.
     Iure ipsam quidem, deleniti sed dolore esse.</p>
+
+    <iframe id="tela" name="frame" src="" >
+        <!-- para poder exibir páginas carregáveis dentro de links dentre da página principal
+             precisamos nomear o <iframe> com o name='#' e no link, o target precisa estar com este nome 
+        -->
+        infelizmente seu navegador não compatível com isto
+    </iframe>
           
 </body>
 </html>
