--- a/exercicios/ex024/paginas/pag03.html
+++ b/exercicios/ex024/paginas/pag03.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Segunda página de exemplo</h1>
+    <h1>Terceria página de exemplo</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium consectetur
         distinctio rerum, veniam cupiditate accusamus veritatis ratione ad, nemo officia, ipsam alias.
         Iure ipsam quidem, deleniti sed dolore esse.</p>
