--- a/exercicios/ex024/iframe03.html
+++ b/exercicios/ex024/iframe03.html
@@ -26,12 +26,15 @@
         <li><a href="paginas/pag02.html" target="frame">Segunda página</a></li>
         <li><a href="paginas/pag03.html" target="frame">Terceira página</a></li>
     </ul>
-
+    
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium consectetur
     distinctio rerum, veniam cupiditate accusamus veritatis ratione ad, nemo officia, ipsam alias.
     Iure ipsam quidem, deleniti sed dolore esse.</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="<h1 style='text-align: center;'>Selecione uma página para visualizá-la aqui</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium consectetur
+        distinctio rerum, veniam cupiditate accusamus veritatis ratione ad, nemo officia, ipsam alias.
+        Iure ipsam quidem, deleniti sed dolore esse.</p> <img src='js.png'>"> 
+        <!--srcdoc conseguimos colocar um conteúdo inícial em HTML-->
         <!-- para poder exibir páginas carregáveis dentro de links dentre da página principal
              precisamos nomear o <iframe> com o name='#' e no link, o target precisa estar com este nome 
         -->
