--- a/exercicios/projeto-redes_sociais/index.html
+++ b/exercicios/projeto-redes_sociais/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +14,12 @@
             frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="Github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="Instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="Twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="Facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
         </section>
     </main>
 </body>
