--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -6,10 +6,11 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" 
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <!-- Pegando um ícone de do servidor do google -->
+    <link rel="stylesheet" href="estilos/meida-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()"> <!--quando mudar o tamanho da tela...-->
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()" >menu</span>  
@@ -61,6 +62,15 @@
         </article>
     </main>
     <script>
+
+        function mudouTamanho(){
+            if (window.innerWidth >= 768){ /*se a largura da tela for maior ou igual 768px*/
+                itens.style.display = 'block' /*o menu de telas grandes aparecerá forçadamente*/
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
             if (itens.style.display == 'block') { /*se estiver sendo exibido e cliquei, ele irá esconder*/
                 itens.style.display = 'none'
